<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/orderpage_textview1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:text="@string/chat_shopname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/orderpage_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/orderpage_textview1"
        android:layout_marginLeft="60dp"
        android:text="@string/chat_ordername" />

    <TextView
        android:id="@+id/orderpage_textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/orderpage_textview1"
        android:text="@string/chat_count" />

    <Button
        android:id="@+id/orderpage_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/orderpage_clear" />

    <Button
        android:id="@+id/orderpage_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/orderpage_watch" />

    <Button
        android:id="@+id/orderpage_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/orderpage_confirm" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/orderpage_confirm"
        android:background="#0000ff" >
    </View>

    <ListView
        android:id="@+id/orderpage_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/orderpage_confirm"
        android:layout_below="@id/orderpage_textview2" >
    </ListView>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_above="@id/orderpage_listView"
        android:layout_toLeftOf="@id/orderpage_textview2"
        android:background="#ff00ff" >
    </View>

</RelativeLayout>